--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -15,8 +15,8 @@
     "nodemon": "^2.0.13"
   },
   "dependencies": {
-    "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "mongoose": "^6.0.11",
     "morgan": "^1.10.0",
     "uuid": "^8.3.2"
   }
