--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "movie-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "startDev": "nodemon index.js"
+    "start": "node app.js",
+    "startDev": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
