--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-validator": "^6.13.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
+    "mongoose-to-swagger": "^1.4.0",
     "morgan": "^1.10.0",
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
